[package]
name = "i2f"
authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/identconv"
description = """
Macros that converts number literals into int or float literals.
"""
keywords = ["macros", "ident", "convert", "number"]
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
litrs = { version = "^0.4", default-features = false }
proc-macro-error = { version = "^1", default-features = false }
